--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,36 @@
         <item name="android:background">#2255aa</item>
     </style>
 
+    <style name="TextViewSmall">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#cccccc</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="EditTextSmall">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:background">#fff</item>
+    </style>
+
+    <style name="PortraitButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#cccccc</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:background">#2208aa</item>
+    </style>
+
+    <style name="RadioButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#cccccc</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
 </resources>
