--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    style="@style/RootLayout">
+    style="@style/RootLayout"
+    android:onClick="email">
 
 
     <TextView
@@ -66,7 +67,8 @@
     <Button
         style="@style/PortraitButton"
         android:text="Save As PDF"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:onClick="saveAsPDF" />
 
     <Button
         style="@style/PortraitButton"
